@@ -71,10 +71,13 @@
     <module.name>org.mybatis.migrations</module.name>
 
     <byte-buddy.version>1.18.11</byte-buddy.version>
+    <jmockit.version>2.2.0</jmockit.version>
     <junit.version>6.1.1</junit.version>
 
     <!-- Reproducible Builds -->
     <project.build.outputTimestamp>1767305674</project.build.outputTimestamp>
+
+    <argLine>-javaagent:${settings.localRepository}/com/github/hazendaz/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar -javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/${byte-buddy.version}/byte-buddy-agent-${byte-buddy.version}.jar</argLine>
   </properties>
 
   <dependencies>
@@ -94,6 +97,12 @@
       <groupId>uk.org.webcompere</groupId>
       <artifactId>system-stubs-jupiter</artifactId>
       <version>2.1.8</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.github.hazendaz.jmockit</groupId>
+      <artifactId>jmockit</artifactId>
+      <version>${jmockit.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -204,17 +213,5 @@
       </plugin>
     </plugins>
   </build>
-
-  <profiles>
-    <profile>
-      <id>security-manager</id>
-      <activation>
-        <jdk>[18,24)</jdk>
-      </activation>
-      <properties>
-        <argLine>-Djava.security.manager=allow</argLine>
-      </properties>
-    </profile>
-  </profiles>
 
 </project>
